<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/hostPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/hello_message"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <EditText
            android:id="@+id/hostInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host_input_hint"
            android:inputType="textUri"
            android:singleLine="true"
            android:text="@string/default_host" />

        <EditText
            android:id="@+id/portInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/port_input_hint"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/default_port" />

        <TextView
            android:id="@+id/hostStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/host_status_checking"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <TextView
            android:id="@+id/streamStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stream_status_idle"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <Button
            android:id="@+id/stopServiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/stop_service_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
